@@ -21,6 +21,7 @@ David Carvalho <andaris@gmail.com>
 David Reiss <dreiss@facebook.com>
 Mika Raento <mikie@iki.fi>
 Mike Crowe <mac@mcrowe.com>
+John Muth <muth@parascale.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
