@@ -244,6 +244,15 @@ standard, but of course in violation of the ``be as liberal as possible
 in what you accept'' norm.  It is recommended to turn this @strong{ON}
 if you are testing clients against @mhd{}, and @strong{OFF} in
 production.
+
+@item MHD_USE_POLL
+@cindex FD_SETSIZE
+@cindex poll
+@cindex select
+Use poll instead of select. This allows sockets with descriptors
+@code{>= FD_SETSIZE}.  This option only works in conjunction with
+@code{MHD_USE_THREAD_PER_CONNECTION} (at this point).
+
 @end table
 @end deftp
 
